--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Deploy site to server trough github from Slack",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "build": "netlify-lambda build express",
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "@slack/bolt": "^2.3.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "netlify-lambda": "^2.0.1",
+    "nodemon": "^2.0.4",
+    "serverless-http": "^2.5.0"
   },
   "engines": {
     "node": "11.x"
