--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "slack-app",
+  "name": "bolt-app-template",
   "version": "0.0.1",
-  "description": "Deploy site to server trough github from Slack",
-  "main": "functions/server.js",
+  "description": "A basic template to spin up a Bolt app for Slack",
+  "main": "app.js",
   "scripts": {
-    "build": "netlify-lambda build express",
-    "start": "nodemon app2.js"
+    "start": "node app.js"
   },
   "dependencies": {
-    "@slack/bolt": "^2.3.0",
-    "dotenv": "^8.2.0",
-    "netlify-lambda": "^2.0.1",
-    "nodemon": "^2.0.4",
-    "serverless-http": "^2.5.0",
-    "express": "^4.17.1"
+    "@slack/bolt": "^1.6.0",
+    "dotenv": "^8.2.0"
   },
   "engines": {
     "node": "11.x"
   },
   "repository": {
-    "type": "git",
     "url": "git+https://github.com/poff-bnff/integration.git"
   },
   "license": "MIT",
