--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,5 @@ services:
         command: node app.js
         restart: always
         environment:
+            NODE_ENV: production
             PORT: 80
